# optiwork

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LOG.md  README.md
campaigns/: regex-demo.json
corpora/: main.golden  pathological.golden
crates/optikit/: Cargo.toml
crates/optikit-campaign/: Cargo.toml
crates/optikit-campaign/src/: main.rs
crates/optikit-campaign/tests/: campaign_driver.rs
crates/optikit-paired/: Cargo.toml
crates/optikit-paired/src/: main.rs
crates/optikit-paired/tests/: paired_runner.rs
crates/optikit/src/: lib.rs
crates/regexbench/: Cargo.toml
crates/regexbench/examples/: bench.rs  gen_golden.rs
crates/regexbench/src/: corpus.rs  flat_dfa.rs  lazy_dfa.rs  lib.rs  naive.rs  oracle.rs  prefilter.rs  sota.rs  thompson.rs
docs/: bench-protocol.md  campaign-spec.md  optimization-loop.md  sota-2026.md
scripts/: build-pgo.sh  run-campaign.sh  run-sota-baseline.sh
