[workspace]
resolver = "2"
members = [
    "crates/optikit",
    "crates/optikit-paired",
    "crates/optikit-campaign",
    "crates/regexbench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/nibzard/optiwork"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
