[package]
name = "optikit-campaign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Scripted optimization-campaign driver: preregister, build, gate, compare, log"

[[bin]]
name = "optikit-campaign"
path = "src/main.rs"

[dependencies]
optikit = { path = "../optikit" }
