[package]
name = "optikit-campaign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Scripted optimization-campaign driver: preregister, build, gate, compare, log"

[[bin]]
name = "optikit-campaign"
path = "src/main.rs"

[dependencies]
optikit = { path = "../optikit" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
